style: correção footer

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_NAME="Controle de Vacinação"
+APP_VERSION="1.1.0"
 APP_ENV=local
 APP_KEY=base64:vUwJtvYH355a2qTVbP71ZaSsSgS3qzwkb/vV8yZl52Y=
 APP_DEBUG=true
