--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   "require": {
     "php": "^7.4|^8.0",
     "cocur/slugify": "^4.0",
+    "doctrine/dbal": "^3.1",
     "fideloper/proxy": "^4.4",
     "fruitcake/laravel-cors": "^2.0",
     "guzzlehttp/guzzle": "^7.0.1",
